Package_Tools/include-C/geocode-glib-2.0/geocode-glib/fertig/geocode_enum_types.h


/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */

#ifndef __GEOCODE_ENUM_TYPES_H__
#define __GEOCODE_ENUM_TYPES_H__

#include <glib-object.h>



/* enumerations from "geocode-error.h" */
GType geocode_error_get_type (void);
#define GEOCODE_TYPE_ERROR (geocode_error_get_type ())

/* enumerations from "geocode-location.h" */
GType geocode_location_uri_scheme_get_type (void);
#define GEOCODE_TYPE_LOCATION_URI_SCHEME (geocode_location_uri_scheme_get_type ())
GType geocode_location_crs_get_type (void);
#define GEOCODE_TYPE_LOCATION_CRS (geocode_location_crs_get_type ())

/* enumerations from "geocode-place.h" */
GType geocode_place_type_get_type (void);
#define GEOCODE_TYPE_PLACE_TYPE (geocode_place_type_get_type ())
GType geocode_place_osm_type_get_type (void);
#define GEOCODE_TYPE_PLACE_OSM_TYPE (geocode_place_osm_type_get_type ())


#endif /* __GEOCODE_ENUM_TYPES_H__ */

/* Generated data ends here */